fix problem related to the gap between the nav links

--- a/src/components/sass/base/_typography.scss
+++ b/src/components/sass/base/_typography.scss
@@ -25,6 +25,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 1rem;
         
         &--active{
             background-color: $color-primary-dark;
